# ai-ruler

./: README.md  main.py  pyproject.toml
src/ai_ruler/: commands.py  config.py  main.py  utils.py
tests/: test_commands.py
