[project]
name = "ai-ruler"
version = "0.1.0"
description = "A CLI tool to manage and apply AI rule files for various development tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.3.0",
    "click>=8.2.1",
    "iterfzf>=1.8.0.62.0",
    "pytest>=8.4.1",
    "rich>=14.1.0",
]

[project.scripts]
ai-ruler = "ai_ruler.main:cli"

[tool.uv]
package = true
